<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/margin_medium_2"
    android:paddingRight="@dimen/margin_medium_2"
    android:paddingTop="@dimen/margin_medium_2"
    android:weightSum="3">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:src="@drawable/standard_chartered_bank" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/job_search_bank_1"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/job_search_bank_2"
            android:textSize="@dimen/text_regular_2x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/job_search_sg"
            android:textSize="@dimen/text_small" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_job_search_new"
        android:layout_width="@dimen/button_size_job_search_width"
        android:layout_height="@dimen/button_size_job_search_height"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:padding="0dp"
        android:text="@string/job_search_bank_button"
        android:textColor="#FFF" />

</LinearLayout>