<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WinZinFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_medium"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_kyipyar"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:layout_marginBottom="@dimen/margin_medium"
                android:src="@drawable/wunzinn_anky_kyiparnegative" />

            <TextView
                android:id="@+id/tv_wunzinn_bar"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:paddingRight="@dimen/margin_medium_2"
                android:layout_below="@id/img_kyipyar"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@color/border_gray" />

            <TextView
                android:id="@+id/tv_wunzinn_filesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_wunzinn_bar"
                android:text="@string/wunzinn_file_size"
                android:textColor="#000"
                android:textSize="@dimen/text_xsmall"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_wunzinn_makyipyar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/wunzinn_makyipyar"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_wunzinn_nikoye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_wunzinn_makyipyar"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/wunzinn_nikoye"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_wunzinn_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_wunzinn_nikoye"
                android:layout_marginBottom="@dimen/margin_xlarge"
                android:text="@string/wunzinn_price"
                android:textColor="#000" />


            <Button
                android:id="@+id/btn_wunzinn_buy"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_below="@id/tv_wunzinn_price"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/wunzinn_button_bg"
                android:text="@string/btn_wunzinn_buy"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_wunzinn_sample"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_below="@id/btn_wunzinn_buy"
                android:background="@drawable/wunzinn_button_bg"
                android:text="@string/btn_wunzinn_Sample"
                android:textAllCaps="false" />


        </RelativeLayout>
    </LinearLayout>
</FrameLayout>

