<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium_2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/pulse_editor_title"
                    android:textColor="#000"
                    android:textSize="@dimen/text_regular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/pulse_editor_3h"
                    android:textColor="#666"
                    android:textSize="@dimen/text_regular" />

            </RelativeLayout>

            <TextView
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="@color/border_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/pulse_title_china"
                android:textColor="#222"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pulse_title_author_share"
                android:textColor="#666"
                android:textSize="@dimen/text_regular" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:scaleType="centerCrop"
                android:src="@drawable/pulse_china" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>