<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/movie_story_title"
                android:textColor="#737373"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="3"
                android:text="@string/movie_story_body"
                android:textColor="@color/color_primary_dark_two"
                android:textSize="@dimen/text_regular" />

            <TextView
                android:id="@+id/tv_read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/read_more"
                android:textAllCaps="true"
                android:textColor="#0f9d58"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>