<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:context="com.thargyi.padc_exercise_week4.fragments.WinZinFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_medium_2"
            android:paddingLeft="@dimen/margin_medium_2"
            android:paddingRight="@dimen/margin_medium_2"
            android:paddingTop="@dimen/margin_medium_2">

            <include
                layout="@layout/wunzinn_nekoye"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_medium_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/wunzinn_summery"
                android:textColor="#9b7f11"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="..."
                android:textColor="#000"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/wunzinn_related_books"
                android:textColor="#9b7f11"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium_3"
                android:text="@string/wunzinn_hartha"
                android:textColor="#9b7f11" />

            <include
                layout="@layout/wunzinn_img_scroll01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_medium_3" />

            <include
                layout="@layout/wunzinn_img_scroll02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_medium_3" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
